# SecurityDrone

./: .gitignore  pyproject.toml
src/: CMakeLists.txt  requirements.txt
src/configs/: tello_curriculum.py  tello_ppo_cfg.yaml
src/models/: tello.urdf
src/scripts/: convert_tello.py  smoke_test_isaaclab.py  tello_env_cfg.py  tello_isaaclab_task.py  train.py
src/scripts/local_mock/: __init__.py  env_wrapper.py
src/scripts/tello_training_logs/: events.out.tfevents.1782436465.DerrickL.89129.0  events.out.tfevents.1782436542.DerrickL.89384.0  events.out.tfevents.1782436649.DerrickL.89652.0  events.out.tfevents.1782436661.DerrickL.89713.0  events.out.tfevents.1782436696.DerrickL.89828.0  events.out.tfevents.1782436717.DerrickL.89907.0  events.out.tfevents.1782436730.DerrickL.89995.0  events.out.tfevents.1782436755.DerrickL.90090.0  events.out.tfevents.1782436794.DerrickL.90207.0  events.out.tfevents.1782436810.DerrickL.90289.0  events.out.tfevents.1782436823.DerrickL.90358.0  events.out.tfevents.1782436836.DerrickL.90431.0  events.out.tfevents.1782436851.DerrickL.90500.0  events.out.tfevents.1782436864.DerrickL.90577.0  events.out.tfevents.1782436877.DerrickL.90652.0  events.out.tfevents.1782436922.DerrickL.90783.0  events.out.tfevents.1782436935.DerrickL.90852.0  events.out.tfevents.1782437022.DerrickL.91076.0  events.out.tfevents.1782437429.DerrickL.92024.0  events.out.tfevents.1782437900.DerrickL.93096.0  events.out.tfevents.1782437997.DerrickL.93369.0  events.out.tfevents.1782438733.DerrickL.95019.0  events.out.tfevents.1782438780.DerrickL.95194.0  events.out.tfevents.1782438872.DerrickL.95439.0  events.out.tfevents.1782438944.DerrickL.95648.0  events.out.tfevents.1782439022.DerrickL.95864.0  events.out.tfevents.1782439133.DerrickL.96164.0  events.out.tfevents.1782439196.DerrickL.96351.0  events.out.tfevents.1782439293.DerrickL.96627.0  events.out.tfevents.1782439429.DerrickL.97061.0  events.out.tfevents.1782439583.DerrickL.97454.0  events.out.tfevents.1782439657.DerrickL.97679.0  events.out.tfevents.1782439769.DerrickL.97997.0  events.out.tfevents.1782439886.DerrickL.98308.0  events.out.tfevents.1782440018.DerrickL.98649.0  events.out.tfevents.1782440133.DerrickL.98964.0  events.out.tfevents.1782440204.DerrickL.99168.0  events.out.tfevents.1782440224.DerrickL.99268.0  events.out.tfevents.1782440244.DerrickL.99359.0  events.out.tfevents.1782440380.DerrickL.99732.0  (+32 more)
src/securitydrone.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+22 files in other folders)
